cleaned up brief section, tests complete for optimal path calc
